- Increase icon sizes in Tab. - Update padding of Tab with visual center when using icon, like the buttons. - Fix incorrect gap in ButtonContent.

--- a/packages/elements/src/components/ui/tag/Tag.module.css
+++ b/packages/elements/src/components/ui/tag/Tag.module.css
@@ -7,14 +7,14 @@
   --swui-tag-letter-spacing: var(--swui-text-letter-spacing);
   --swui-tag-height-normal: 24px;
   --swui-tag-height-small: 16px;
-  --swui-tag-border-radius: var(--swui-border-radius);
+  --swui-tag-border-radius: var(--swui-border-radius-small);
   --swui-tag-bg-color: var(--lhds-color-blue-100);
   --swui-tag-text-color: var(--black);
   --swui-tag-icon-label-indent: var(--swui-metrics-indent);
   --swui-tag-indent-normal: calc(var(--swui-metrics-indent) * 2);
   --swui-tag-indent-small: var(--swui-metrics-indent);
-  --swui-tag-icon-size-normal: 1.4rem;
-  --swui-tag-icon-size-small: 1rem;
+  --swui-tag-icon-size-normal: 1.6rem;
+  --swui-tag-icon-size-small: 1.4rem;
 
   /* State vars */
   --current-text-color: var(--swui-tag-text-color);
@@ -42,6 +42,12 @@
 
   .icon {
     font-size: var(--current-icon-size);
+  }
+
+  &.medium {
+    &.withIcon {
+      padding-left: calc(var(--current-indent) / 2);
+    }
   }
 
   &.small {
